[package]
name = "proxy_vpn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy_vpn"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
xilem = { git = "https://github.com/linebender/xilem" }
masonry = { git = "https://github.com/linebender/xilem" }
winit = { version = "0.30", features = ["android-native-activity"] }

[package.metadata.android]
package = "com.oligami.proxy_vpn"

build_targets = [ "aarch64-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 30
target_sdk_version = 34
